--- a/contact.html
+++ b/contact.html
@@ -4,51 +4,118 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact | Tulsi Kumar</title>
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
 <style>
-/* Same styling as above */
-* { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
-body { background: #f5f5f5; color:#333; line-height:1.6; }
-header { background: linear-gradient(90deg, #000000, #1ecbe2, #4f46e5, #8b5cf6); background-size:400% 400%; animation: gradientBG 15s ease infinite; color:#fff; padding:20px 0; position:sticky; top:0; z-index:1000; box-shadow:0 4px 15px rgba(0,0,0,0.2); }
-nav { display:flex; justify-content:center; gap:30px; flex-wrap:wrap; }
-nav a { color:#fff; text-decoration:none; font-weight:bold; transition: all 0.3s; padding:8px 12px; border-radius:6px; }
-nav a:hover { background: rgba(255,255,255,0.2); transform: scale(1.1); }
-.hero { text-align:center; padding:100px 20px; background: linear-gradient(135deg, #6a11cb, #2575fc); color:#fff; border-radius: 0 0 50% 50% / 20%; position:relative; overflow:hidden; }
-.hero h1 { font-size:3em; margin-bottom:20px; animation: fadeIn 2s ease-in-out; }
-.hero p { font-size:1.2em; margin-bottom:30px; animation: fadeIn 2s 0.5s ease-in-out; }
-section { padding:80px 20px; max-width:1000px; margin:auto; }
-footer { text-align:center; padding:50px 20px; background:#111; color:#fff; margin-top:50px; }
-.contact-iframe { width: 100%; height: 600px; border:none; border-radius:12px; }
+* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
+body { background: #1b1b1b; color: #d1d1d1; line-height: 1.6; overflow-x: hidden; }
+
+@keyframes gradientBG {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 @keyframes fadeIn { from {opacity:0; transform: translateY(20px);} to {opacity:1; transform: translateY(0);} }
-@keyframes gradientBG { 0% {background-position:0% 50%;} 50% {background-position:100% 50%;} 100% {background-position:0% 50%;} }
+
+header { 
+    background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
+    background-size: 400% 400%;
+    animation: gradientBG 10s ease infinite;
+    color: #a3c9c9; 
+    padding: clamp(10px, 2vh, 20px) 0; 
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.7);
+}
+nav { display: flex; justify-content: center; gap: clamp(10px, 3vw, 40px); flex-wrap: wrap; }
+nav a { color: #a3c9c9; text-decoration: none; font-weight: bold; transition: all 0.3s; padding: clamp(6px, 1vw, 10px) clamp(10px, 2vw, 16px); border-radius: 6px; font-size: clamp(0.9rem, 1.5vw, 1rem);}
+nav a:hover { background: rgba(163,201,201,0.2); transform: scale(1.1); }
+
+.hero {
+    width: 100vw; 
+    text-align: center; 
+    padding: clamp(60px, 10vh, 120px) 5vw; 
+    background: linear-gradient(180deg, #0f2027, #203a43); 
+    color: #a3c9c9; 
+    border-radius: 0 0 50% 50% / 20%; 
+    position: relative; 
+    overflow: hidden;
+}
+.hero h1 { font-size: clamp(2rem, 5vw, 3.5rem); margin-bottom: clamp(10px, 2vh, 20px); animation: fadeIn 2s ease-in-out; }
+.hero p { font-size: clamp(1rem, 2vw, 1.3rem); margin-bottom: clamp(20px, 3vh, 30px); animation: fadeIn 2s 0.5s ease-in-out; }
+.hero a { display: inline-block; padding: clamp(10px, 1.5vh, 14px) clamp(20px, 2.5vw, 28px); font-weight: bold; background: #a3c9c9; color: #1b1b1b; border-radius: 50px; box-shadow: 0 8px 20px rgba(0,0,0,0.6); transition: all 0.3s; font-size: clamp(0.9rem, 1.6vw, 1.1rem);}
+.hero a:hover { transform: translateY(-3px); box-shadow: 0 12px 25px rgba(0,0,0,0.8); }
+
+.contact-section {
+    padding: clamp(50px, 10vh, 80px) 5vw;
+    max-width: 1500px;
+    margin: auto;
+    text-align: center;
+}
+.contact-section h2 {
+    font-size: clamp(1.5rem, 4vw, 2.5rem);
+    margin-bottom: clamp(20px, 4vh, 30px);
+    color: #a3c9c9;
+}
+.contact-iframe {
+    width: 100%;
+    height: 800px;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+}
+
+footer { 
+    text-align: center; 
+    padding: clamp(15px, 2vh, 20px); 
+    background: #0f2027; 
+    color: #a3c9c9; 
+    margin-top: 50px; 
+    font-size: clamp(0.8rem, 1.5vw, 1rem); 
+}
+
+@media(max-width:768px){ 
+    .hero { border-radius: 0 0 30% 30% / 15%; } 
+}
+@media(max-width:480px){ 
+    .hero { padding: 60px 5vw; } 
+    nav { gap: 10px; } 
+}
 </style>
 </head>
 <body>
 
 <header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="robotics.html">Robotics</a>
-        <a href="cv.html">CV</a>
-        <a href="automation.html">Automation</a>
-        <a href="genai.html">GenAI</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+  <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="robotics.html">AI and Robotics</a>
+      <a href="automation.html">Automation</a>
+      <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
-<section class="hero">
-    <h1>Contact Me</h1>
-    <p>Book a meeting or chat with me below.</p>
-</section>
 
-<section>
+
+<section class="contact-section">
     <h2>Schedule a Meeting</h2>
-    <!-- Embed your chatbot or Calendly here -->
     <iframe class="contact-iframe" src="https://calendly.com/engr-tulsikumar" title="Book a Meeting"></iframe>
 </section>
 
-<footer>
-    &copy; 2025 Tulsi Kumar | Designed with ❤️
+<footer style="text-align: center; padding: 50px 20px; background: #0f2027; color: #a3c9c9;">
+  <p>&copy; 2025 Tulsi Kumar</p>
+  <div style="margin-top: 20px;">
+    <div style="display: flex; justify-content: center; gap: 30px;">
+      <a href="https://www.linkedin.com/in/tulsi-kumar" target="_blank" style="color: #a3c9c9; text-decoration: none; font-size: 1.2rem;">
+        <i class="fab fa-linkedin" style="margin-right: 8px;"></i>LinkedIn
+      </a>
+      <a href="mailto:tulsi.kumar@example.com" style="color: #a3c9c9; text-decoration: none; font-size: 1.2rem;">
+        <i class="fas fa-envelope" style="margin-right: 8px;"></i>Gmail
+      </a>
+      <a href="https://github.com/tulsikumar-1" target="_blank" style="color: #a3c9c9; text-decoration: none; font-size: 1.2rem;">
+        <i class="fab fa-github" style="margin-right: 8px;"></i>GitHub
+      </a>
+    </div>
+  </div>
 </footer>
 
 </body>
