--- a/index.html
+++ b/index.html
@@ -4,135 +4,290 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tulsi Kumar | Portfolio</title>
+
+<!-- Swiper CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 <style>
-/* Basic reset */
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
-body { background: #f5f5f5; color: #333; line-height: 1.6; }
+body { background: #1b1b1b; color: #d1d1d1; line-height: 1.6; overflow-x: hidden; }
 
-/* Animated gradient background */
-@keyframes gradientBG {
-  0% {background-position: 0% 50%;}
-  50% {background-position: 100% 50%;}
-  100% {background-position: 0% 50%;}
-}
+@keyframes gradientBG {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 
-/* Header and nav */
 header { 
-    background: linear-gradient(90deg, #000000, #1ecbe2, #4f46e5, #8b5cf6); 
+    background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
     background-size: 400% 400%;
-    animation: gradientBG 15s ease infinite;
-    color: #fff; 
-    padding: 20px 0; 
+    animation: gradientBG 10s ease infinite;
+    color: #a3c9c9; 
+    padding: clamp(10px, 2vh, 20px) 0; 
     position: sticky;
     top: 0;
     z-index: 1000;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.7);
 }
-nav { display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; }
-nav a { color: #fff; text-decoration: none; font-weight: bold; transition: all 0.3s; padding: 8px 12px; border-radius: 6px; }
-nav a:hover { background: rgba(255,255,255,0.2); transform: scale(1.1); }
+nav { display: flex; justify-content: center; gap: clamp(10px, 3vw, 40px); flex-wrap: wrap; }
+nav a { color: #a3c9c9; text-decoration: none; font-weight: bold; transition: all 0.3s; padding: clamp(6px, 1vw, 10px) clamp(10px, 2vw, 16px); border-radius: 6px; font-size: clamp(0.9rem, 1.5vw, 1rem);}
+nav a:hover { background: rgba(163,201,201,0.2); transform: scale(1.1); }
 
-/* Hero */
-.hero { 
-    text-align: center; 
-    padding: 120px 20px; 
-    background: linear-gradient(135deg, #6a11cb, #2575fc); 
-    color: #fff; 
+/* Hero Section */
+.hero {
+    width: 100vw;
+    padding: clamp(60px, 10vh, 120px) 5vw;
+    background: linear-gradient(180deg, #0f2027, #203a43);
+    color: #a3c9c9;
     border-radius: 0 0 50% 50% / 20%;
-    position: relative;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.hero h1 { font-size: 3.5em; margin-bottom: 20px; animation: fadeIn 2s ease-in-out; }
-.hero p { font-size: 1.3em; margin-bottom: 30px; animation: fadeIn 2s 0.5s ease-in-out; }
-.hero a { 
-    display: inline-block;
-    padding: 14px 28px;
-    font-weight: bold;
-    background: #fff;
-    color: #4f46e5;
-    border-radius: 50px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+
+.hero-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    width: 100%;
+}
+
+.hero-image {
+    flex: 1 1 400px;
+    text-align: center;
+}
+
+.hero-image img {
+    max-width: 300px;
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.6);
+}
+
+.hero-text {
+    flex: 1 1 500px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-text h1 { 
+    font-size: clamp(2rem, 5vw, 3.5rem); 
+    margin-bottom: clamp(10px, 2vh, 20px); 
+    animation: fadeIn 2s ease-in-out; 
+}
+.hero-text p { 
+    font-size: clamp(1rem, 2vw, 1.3rem); 
+    margin-bottom: clamp(20px, 3vh, 30px); 
+    animation: fadeIn 2s 0.5s ease-in-out; 
+}
+
+/* Social Links with Icons */
+.hero-links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.hero-links a.social-link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: #a3c9c9;
+    text-decoration: none;
+    font-size: 1.2rem;
     transition: all 0.3s;
 }
-.hero a:hover { transform: translateY(-3px); box-shadow: 0 12px 25px rgba(0,0,0,0.3); }
 
-/* Projects grid */
-.projects { 
-    display: grid; 
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); 
-    gap: 25px; 
-    max-width: 1100px; 
-    margin: 60px auto; 
-    padding: 0 20px;
+.hero-links a.social-link i {
+    font-size: 1.3rem;
 }
-.project { 
-    background: #fff; 
-    padding: 25px; 
-    border-radius: 15px; 
-    box-shadow: 0 10px 25px rgba(0,0,0,0.1); 
-    text-align: center; 
-    transition: transform 0.3s, box-shadow 0.3s;
+
+.hero-links a.social-link:hover {
+    color: #1ecbe2;
 }
-.project:hover { transform: translateY(-10px); box-shadow: 0 20px 35px rgba(0,0,0,0.15); }
-.project img { max-width: 100%; border-radius: 12px; margin-bottom: 15px; }
+
+/* Book a Meeting Button */
+.hero-links a.button-link {
+    padding: 10px 20px;
+    font-weight: bold;
+    background: #a3c9c9;
+    color: #1b1b1b;
+    border-radius: 50px;
+    text-decoration: none;
+    transition: all 0.3s;
+    white-space: nowrap;
+}
+
+.hero-links a.button-link:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 12px 25px rgba(0,0,0,0.8);
+}
+
+/* Projects Section */
+.projects-section { text-align: center; padding: clamp(50px, 10vh, 80px) 5vw; }
+.projects-section h2 { font-size: clamp(1.5rem, 4vw, 2.5rem); margin-bottom: clamp(20px, 4vh, 30px); color: #a3c9c9; }
+.swiper { width: min(95%, 1200px); margin: auto; min-height: 400px; }
+
+.swiper-slide {
+    background: #2a2a2a;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.6);
+    padding: clamp(15px, 3vw, 25px);
+    text-align: center;
+    transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100%;
+}
+
+.swiper-slide:hover { transform: translateY(-10px); }
+
+.swiper-slide img {
+    width: 100%;
+    height: 200px; 
+    border-radius: 12px;
+    margin-bottom: 15px;
+    object-fit: cover; 
+}
+
+.swiper-slide a { color: #d1d1d1; text-decoration: none; display: block; }
+.swiper-slide h3 { color:#1ecbe2; margin-bottom: 10px; }
+.swiper-slide p { line-height: 1.4; flex-grow: 1; }
 
 /* Footer */
-footer { text-align: center; padding: 50px 20px; background: #111; color: #fff; margin-top: 50px; }
+footer { text-align: center; padding: clamp(15px, 2vh, 20px); background: #0f2027; color: #a3c9c9; margin-top: 50px; font-size: clamp(0.8rem, 1.5vw, 1rem); }
 
-/* Animations */
+footer a { display: flex; align-items: center; gap: 8px; color: #a3c9c9; text-decoration: none; transition: all 0.3s; }
+footer a i { font-size: 1.2rem; }
+footer a:hover { color: #1ecbe2; }
+
 @keyframes fadeIn { from {opacity:0; transform: translateY(20px);} to {opacity:1; transform: translateY(0);} }
 
-/* Responsive typography */
-@media(max-width:768px){ .hero h1 { font-size: 2.5em; } .hero p { font-size: 1.1em; } }
-@media(max-width:480px){ nav { gap: 15px; } }
+@media(max-width:768px){
+    .hero-content { flex-direction: column; gap: 30px; }
+    .hero-text, .hero-image { flex: 1 1 100%; text-align: center; }
+    .hero { padding: 60px 5vw; border-radius: 0 0 30% 30% / 15%; }
+    .swiper-slide img { height: 180px; }
+}
+
+@media(max-width:480px){
+    .hero-text h1 { font-size: 2rem; }
+    .hero-text p { font-size: 1rem; }
+    .swiper-slide img { height: 150px; }
+}
 </style>
 </head>
 <body>
 
 <header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="robotics.html">Robotics</a>
-        <a href="cv.html">CV</a>
-        <a href="automation.html">Automation</a>
-        <a href="genai.html">GenAI</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+  <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="robotics.html">AI and Robotics</a>
+      <a href="automation.html">Automation</a>
+      <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 <section class="hero">
-    <h1>Hello, I'm Tulsi Kumar</h1>
-    <p>AI & Automation Engineer | Robotics Enthusiast | Portfolio of Projects & Work</p>
-    <a href="contact.html">Book a Meeting</a>
+  <div class="hero-content">
+    <div class="hero-text">
+      <h1>Tulsi Kumar</h1>
+      <p>Automation & Robotics Engineer | Computer Vision Specialist | AI Enthusiast</p>
+
+      <div class="hero-links">
+        <a href="https://www.linkedin.com/in/tulsi-kumar" target="_blank" class="social-link"><i class="fab fa-linkedin"></i>LinkedIn</a>
+        <a href="mailto:engr.tulsikumar@gmail.com" class="social-link"><i class="fas fa-envelope"></i>Email</a>
+        <a href="https://github.com/tulsikumar-1" target="_blank" class="social-link"><i class="fab fa-github"></i>GitHub</a>
+      </div>
+    </div>
+  </div>
 </section>
 
-<section class="projects">
-    <div class="project">
-        <img src="assets/images/robotic1.png" alt="Robotics Project">
-        <h2>Robotics</h2>
-        <p>Robotics projects involving automation, simulation, and embedded systems.</p>
+<section class="projects-section">
+  <h2>Featured Projects</h2>
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <a href="robotics.html#project1">
+          <img src="assets/images/robotic1.png" alt="Light Weight Object Detection">
+          <h3>Light Weight Object Detection</h3>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="robotics.html#project2">
+          <img src="assets/images/robotic2.png" alt="Multi Robot Simulator">
+          <h3>Multi Robot Simulator</h3>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="automation.html#project1">
+          <img src="assets/images/plc1.png" alt="PLC Conveyor Belt Control">
+          <h3>PLC Conveyor Belt Control</h3>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="automation.html#project2">
+          <img src="assets/images/plc2.png" alt="Automated Pick-and-Place">
+          <h3>Automated Pick-and-Place</h3>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="robotics.html#project3">
+          <img src="assets/images/robotic3.png" alt="Pepper Tic-Tac-Toe">
+          <h3>Tic-Tac-Toe with Pepper</h3>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="robotics.html#project4">
+          <img src="assets/images/robotic4.png" alt="5 DOF Robotic Arm">
+          <h3>5 DOF Robotic Arm</h3>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <a href="robotics.html#project5">
+          <img src="assets/images/robotic5.png" alt="Smart Painting Machine">
+          <h3>Smart Painting Machine</h3>
+        </a>
+      </div>
     </div>
-    <div class="project">
-        <img src="assets/images/cv1.png" alt="CV Project">
-        <h2>Curriculum Vitae</h2>
-        <p>My experience, skills, and professional journey in AI and automation.</p>
-    </div>
-    <div class="project">
-        <img src="assets/images/automation1.png" alt="Automation Project">
-        <h2>Automation</h2>
-        <p>Automation pipelines, ETL, AI-driven systems, and industrial solutions.</p>
-    </div>
-    <div class="project">
-        <img src="assets/images/genai1.png" alt="GenAI Project">
-        <h2>Generative AI</h2>
-        <p>Projects on deep learning, generative models, and AI research experiments.</p>
-    </div>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
 </section>
 
 <footer>
-    &copy; 2025 Tulsi Kumar | Designed with ❤️
+  <p>&copy; 2025 Tulsi Kumar</p>
+  <div style="margin-top: 20px; display: flex; justify-content: center; gap: 30px;">
+    <a href="https://www.linkedin.com/in/tulsi-kumar" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
+    <a href="mailto:engr.tulsikumar@gmail.com"><i class="fas fa-envelope"></i>Email</a>
+    <a href="https://github.com/tulsikumar-1" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+  </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script>
+const swiper = new Swiper('.swiper', {
+  loop: true,
+  autoplay: { delay: 3000, disableOnInteraction: false },
+  speed: 1000,
+  pagination: { el: '.swiper-pagination', clickable: true },
+  navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+  slidesPerView: 1,
+  spaceBetween: 20,
+  breakpoints: { 640: { slidesPerView: 1 }, 768: { slidesPerView: 2 }, 1024: { slidesPerView: 3 } }
+});
+</script>
 </body>
 </html>
