--- a/about.html
+++ b/about.html
@@ -84,60 +84,51 @@ nav a:hover { background: rgba(163,201,201,0.2); transform: scale(1.1); }
 
 /* Timeline container */
 .timeline {
-  position: relative;
-  max-width: 1200px;
+  max-width: 900px;
   margin: 60px auto;
   padding: 0 20px;
 }
 
-.timeline::before {
-  content: none; 
-}
-
 .timeline h2 {
-  font-size: clamp(2rem, 4vw, 3rem); /* Adjust as needed */
+  font-size: clamp(2rem, 4vw, 3rem);
   color: #a3c9c9;
   margin-bottom: 40px;
   text-align: center;
 }
 
-/* Timeline items */
+/* Timeline cards */
 .timeline-item {
   position: relative;
-  padding-left: 70px;
-  margin-bottom: 50px;
+  padding: 20px 25px;
+  margin-bottom: 40px;
+  background: #2a2a2a;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.timeline-item::before {
-  content: '';
-  position: absolute;
-  left: 22px;
-  top: 5px;
-  width: 18px;
-  height: 18px;
-  background: #1b1b1b;
-  border: 3px solid #a3c9c9;
-  border-radius: 50%;
-  box-shadow: 0 0 8px rgba(163, 201, 201, 0.5);
+.timeline-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 25px rgba(0,0,0,0.6);
 }
 
 .timeline-item h3 {
   color: #a3c9c9;
-  font-size: 1.4rem;
-  margin-bottom: 6px;
+  font-size: 1.5rem;
+  margin-bottom: 8px;
 }
 
 .timeline-item h4 {
   color: #7fbcbc;
-  font-size: 1.1rem;
-  margin-bottom: 6px;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
 }
 
 .timeline-item p {
   color: #d1d1d1;
   font-size: 1rem;
   text-align: justify;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 /* Footer */
@@ -158,12 +149,7 @@ footer {
 
 /* Responsive adjustments */
 @media(max-width: 768px){
-  .timeline::before { left: 15px; }
-  .timeline-item { padding-left: 55px; }
-  .timeline-item::before { left: 7px; }
   .about-content { flex-direction: column; gap: 30px; }
-  .about-text { text-align: justify; }
-  .about-section { border-radius: 0 0 30% 30% / 15%; }
 }
 
 @media(max-width: 480px){
@@ -203,7 +189,7 @@ footer {
 </section>
 
 <section class="timeline">
-  <h2 style="text-align:center; color:#a3c9c9; margin-bottom:40px;">Professional Experience</h2>
+  <h2>Professional Experience</h2>
 
   <div class="timeline-item">
     <h3>AI Engineer – Pi School</h3>
@@ -215,7 +201,6 @@ footer {
       and mitigation pipelines to ensure reliable AI-driven insights for earth observation applications.
     </p>
   </div>
-
 
   <div class="timeline-item">
     <h3>Freelance AI & Automation Engineer – STROM Customised Solutions</h3>
@@ -257,14 +242,13 @@ footer {
     </p>
   </div>
 
-
-  <h2 style="text-align:center; color:#a3c9c9; margin:60px 0 40px 0;">Education</h2>
+  <h2>Education</h2>
 
   <div class="timeline-item">
     <h3>Master’s in Artificial Intelligence & Robotics</h3>
     <h4>Sapienza University of Rome, Italy | Nov 2021 – Oct 2024</h4>
     <p>
-    Specialized in computer vision, motion planning, SLAM, and control systems. Implemented real-time perception and robotic control projects.
+      Specialized in computer vision, motion planning, SLAM, and control systems. Implemented real-time perception and robotic control projects.
     </p>
   </div>
 
@@ -274,7 +258,6 @@ footer {
     <p>
       Worked on robotics systems, embedded electronics, and automation projects, building prototypes that integrated sensors, actuators, and control algorithms.
     </p>
-
   </div>
 </section>
 
